[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
dotenvy = "0.15.7"
http-body = "0.4.5"
hyper = { version = "0.14.27", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.102"
sqlx = { version = "0.7.0", features = ["postgres", "any", "runtime-tokio-rustls"] }

thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
validator = { version = "0.16.1", features = ["derive"] }

[features]
default = ["db-test"]
db-test = []
