[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
dotenvy = "0.15.7"
http-body = "1.0.0"
hyper = { version = "1.3.1", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.8.0", features = ["postgres", "any", "runtime-tokio-rustls"] }

thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.6.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.19.0", features = ["derive"] }

[features]
default = ["db-test"]
db-test = []
